2009/3/31:
	- overloaded __hash__() with HashCode() for *almost* all pythonOCC objects
2009/3/27:
	- bugfixes in CADViwer and CADViewerMDI
	- new Mesh sample
2009/3/26:
	- the '==' operator is wrapped
	- byref parameter for Standard_Integer &
2009/3/25:
	- New Topology module
	- Level1 andLevel2 hierarchy of samples
2009/3/23:
	- LocOpe fix for Linux
	- in SWIG_generator, added sorting of self.dependencies_headers
	- if PYTHONOCC_VERBOSE defined, call to custom destructor is displayed
2009/3/22:
	- Added 'YELLOW' and GetSelectedShape to OCCViewer.py
	- Added Visual3d, TopOpeBREpBuild, BRepFeat, TPrsStd for Linux/Darwin
2009/3/21:
	- custom destructor extended to all objects
2009/3/15:
	 - new samples set
	 - new DisplayColoredShape in OCCViewer.py
	 - Bugfixes in OCCViewer
	 - SConstruct fixes
2009/3/11:
	- Segfaults/memory bugfix (added cursomtized default destructor for Standard_Transcient objects)
2009/3/4:
	- Better portability for lib finding
2009/3/2:
	- Added OCC.Toolkits...
	- Before building .i files, OCC folder is cleared
2009/3/1:
	- bugfix in SWIG_generator: enums and typedef were added in wrong modules (GeomAbs enum in Geom etc.)
2009/2/27:
	- Plugin, PXCAFDoc, Xml*
2009/02/26:
	- Added NIS, NLPlate, Resource, Select2D, Select3D, SortTools, StdDrivers, StdFail, 
	StdLDrivers, StdSelect, StepDimTol, STEPEdit, StepFEA, StepFile, StepSelect,
	StepSelections, StepToGeom, StepToTopoDS, UnitsAPI, Visual3d, TransferBRep, 
	APIHeaderSection, PCDMShape, PTopoDS, PBrep, Prs2d, PPoly, PTopLoc, PTColStd,
	PPrStd, RWStep*, TPrsStd, 
2009/02/25:
	- Added Bin*, Bisector, BiTgte, BSplSLib, BSplSLib, CSLib, Dico, EDL, PMMgt, ObjMgt,
	PColStd, PColgp, PCollection, PColGeom, PColGeom2d, PGeom, PGeom2d, Plate, PShort,
	Sweep, TopBas, TopClass, TopCnx, TopTrans, ProjLib, ShapeProcessAPI,
2009/02/24:
	- Added MDF, MFunction, Mat2d, DBC, PDF, PStandard, PNaming, CGM, IGESConvGeom,
	IntImpParGen,FEmTool, IFGraph, MgtTopoDS, MgtBRep, MNaming, PFunction, DNaming,